feat: add  sidebar footer, add header for profile page

--- a/src/app/common-ui/sidebar/sidebar.html
+++ b/src/app/common-ui/sidebar/sidebar.html
@@ -15,9 +15,25 @@
 
 <p class="medium-text mb-20">Подписчики</p>
 
-<app-subscriber-card></app-subscriber-card>
+@for (subscriber of subscribers$ | async; track subscriber.id) {
+  <app-subscriber-card [profile]="subscriber"></app-subscriber-card>
+}
 
 <div class="mt-20 to-subscribers">
   <a [routerLink]="['/subscribers']" class="to-subscribers-link medium-text">Все подписчики</a>
   <svg icon="arrow" class="to-subscriber-icon"></svg>
 </div>
+
+<footer class="sidebar__footer">
+  @if (me(); as me) {
+    @if (me.avatarUrl) {
+      <img [src]="me.avatarUrl | imageUrl" />
+    } @else {
+      <img src="/assets/img/avatar-placeholder.png" />
+    }
+  }
+  <div class="medium-text username-text">{{ me()?.username }}</div>
+  <a [routerLink]="['settings']" class="settings-btn">
+    <svg icon="settings"></svg>
+  </a>
+</footer>
