--- a/src/app/common-ui/sidebar/sidebar.scss
+++ b/src/app/common-ui/sidebar/sidebar.scss
@@ -1,6 +1,8 @@
 :host {
   display: block;
   padding: 20px 12px;
+  position: relative;
+  background: var(--dark-color);
 }
 
 .main-menu-list {
@@ -39,4 +41,50 @@
 .menu-item svg {
   width: 16px;
   height: 16px;
+}
+
+.to-subscribers {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.to-subscribers-link {
+  color: var(--primary-color);
+  text-decoration: none;
+}
+
+.to-subscriber-icon {
+  width: 18px;
+  height: 18px;
+}
+
+.sidebar__footer {
+  background: var(--dark-hover-color);
+  border-radius: 2px;
+  padding: 4px 16px;
+  display: grid;
+  grid-template-columns: 32px 1fr 16px;
+  grid-gap: 12px;
+  align-items: center;
+  position: absolute;
+  bottom: 20px;
+  width: calc(100% - 20px);
+  img {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+  }
+  .username-text {
+    font-weight: 700;
+    color: var(--primary-color);
+  }
+}
+
+.settings-btn {
+  svg {
+    width: 13px;
+    height: 13px;
+    color: var(--primary-color);
+  }
 }
