--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,7 @@
 }
 
 body {
+  height: 100dvh;
   font-family: 'JetBrains Mono', sans-serif;
   background-color: var(--dark-color);
   color: var(--light-color);
@@ -70,6 +71,12 @@ body {
   font-weight: 800;
 }
 
+.h4 {
+  font-size: 24px;
+  font-weight: 800;
+  line-height: 32px;
+}
+
 .h6 {
   font-size: 18px;
   line-height: 24px;
@@ -87,6 +94,12 @@ body {
   font-size: 12px;
   font-weight: 500;
   line-height: 16px;
+}
+
+.regular {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
 }
 
 .tt--control-label {
