--- a/src/app/common-ui/sidebar/sidebar.html
+++ b/src/app/common-ui/sidebar/sidebar.html
@@ -4,10 +4,10 @@
   <ul class="main-menu-list">
     @for (menuItem of menuItems; track menuItem.icon) {
       <li>
-        <button class="menu-item">
+        <a class="menu-item" [routerLink]="[menuItem.link]">
           <svg [icon]="menuItem.icon"></svg>
           <span>{{ menuItem.label }}</span>
-        </button>
+        </a>
       </li>
     }
   </ul>
