--- a/src/app/pages/profile-page/profile-page.html
+++ b/src/app/pages/profile-page/profile-page.html
@@ -1,8 +1,34 @@
 @if (profile$ | async; as profile) {
   <header class="profile-page__header">
-    <app-profile-header [profile]="profile"> </app-profile-header>
+    <app-profile-header [profile]="profile"></app-profile-header>
     <a class="btn to-settings-btn" [routerLink]="['/settings']">
-      Редактировать <svg icon="settings" class="to-settings-icon"></svg
-    ></a>
+      Редактировать
+      <svg icon="settings" class="to-settings-icon"></svg>
+    </a>
   </header>
+  <main class="profile-page__body">
+    <app-post-feed></app-post-feed>
+
+    <div>
+      <h3 class="h6 mb-16">Подписчики</h3>
+      <div class="subscribers-wrapper mb-32">
+        @for (subscriber of subscribers$ | async; track subscriber.id) {
+          <a class="subscriber-avatar-btn" [routerLink]="['/profile', subscriber.id]">
+            <img [src]="subscriber.avatarUrl | imageUrl" />
+          </a>
+        }
+        <a class="to-subscriber-search" [routerLink]="['/search']"> </a>
+      </div>
+
+      <h3 class="h6 mb-16">Навыки</h3>
+      <div class="stack-wrapper mb-32">
+        @for (skill of profile.stack; track skill) {
+          <div class="skill-tag">{{ skill }}</div>
+        }
+      </div>
+
+      <h3 class="h6 mb-16">О себе</h3>
+      <p class="medium-text">{{ profile.description }}</p>
+    </div>
+  </main>
 }
