feat: add upload avatar and filters profiles

--- a/src/app/pages/search-page/search-page.html
+++ b/src/app/pages/search-page/search-page.html
@@ -1,5 +1,6 @@
+<app-profile-filters></app-profile-filters>
 <div class="profile-card__wrapper">
-  @for (profile of profiles; track profile.id) {
+  @for (profile of profiles(); track profile.id) {
     <app-profile-card [profile]="profile"></app-profile-card>
   }
 </div>
