--- a/src/app/pages/setting-page/setting-page.html
+++ b/src/app/pages/setting-page/setting-page.html
@@ -16,8 +16,12 @@
       <input type="text" class="tt-form-input" formControlName="username" />
     </label>
     <label class="tt-form-label">
-      <span class="tt-form-label__text">Навыки</span>
+      <span class="tt-form-label__text">О себе</span>
       <textarea formControlName="description" class="tt-form-input tt-textarea" rows="4"></textarea>
+    </label>
+    <label class="tt-form-label">
+      <span class="tt-form-label__text">Аватар</span>
+      <app-avatar-upload></app-avatar-upload>
     </label>
     <label class="tt-form-label">
       <span class="tt-form-label__text">Навыки</span>
